--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
     "allowJs": true,
     "experimentalDecorators": true,
     "moduleResolution": "node",
+    "forceConsistentCasingInFileNames": true,
   },
   "include": ["src/**/*.ts", "src/types/*.d.ts"]
 }
